--- a/README.html
+++ b/README.html
@@ -50,7 +50,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- badges: end -->
 <section id="probando-webr" class="level2">
 <h2 class="anchored" data-anchor-id="probando-webr">Probando WebR</h2>
-<p>La <strong>slides</strong> pueden probarse <a href="https://github.com/perezp44/webR.prueba">aquí</a></p>
+<p>La <strong>slides</strong> pueden probarse <a href="https://perezp44.github.io/webR.prueba/#/title-slide">aquí</a></p>
 </section>
 
 </main>
